<resources>
    <string name="app_name">Roar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="initial_payment"><![CDATA[Initial Payment( including other fees)]]></string>
    <string name="verify_number">Verify\t %s</string>
    <string name="notifyText">%s\thas booked to visit the above lodge</string>
    <string name="remaining_day">%s days left</string>
    <string name="format_price">₦%s</string>
    <string name="format_price_integer">₦%d</string>
    <string name="choice_title">%s \tLodge</string>
    <string name="emailUs">roar.escrow.mailbox@gmail.com</string>

    <!--query strings strings-->
    <string name="lodges_arg_capital">Lodges</string>
    <string name="lodge_fire_store">lodges</string>
    <string name="product_arg">Product</string>
    <string name="roar_arg">roar</string>
    <string name="product_properties">properties</string>

    <!--lodges notification_string-->
    <string name="lodges_notification_channel_id">LODGES_CHANNEL</string>
    <string name="lodges_notification_channel_name">Vacant Room Notification !!</string>

    <!--products notification string-->
    <string name="product_notification_channel_id">PRODUCTS_CHANNEL</string>
    <string name="product_notification_channel_name">New Product Notification !!</string>
    <!-- Preference Titles -->

    <!-- Sync Preferences -->
    <string name="swipe_right"><![CDATA[< Swipe right to upload lodge pictures >]]></string>


    <!--Business subscription plan-->
    <string name="business_default_price">Free</string>
    <string name="business_default">Default</string>
    <string name="business_default_slot">1</string>

    <!--Business personal plan-->
    <string name="business_personal_slot">10</string>
    <string name="business_personal_price">₦750</string>
    <string name="business_personal">Personal</string>

    <!--Business professional plan-->
    <string name="business_pro_slot">20</string>
    <string name="business_pro_price">₦750</string>
    <string name="business_pro">Professional</string>
    <string name="animation_background">#FFFFFF</string>

    <!--Estate subscription plan-->
    <string name="estate_default_slot">1</string>
    <string name="estate_default_price">Free</string>
    <string name="estate_default">Default</string>
    <!--Personal-->
    <string name="estate_personal_slot">10</string>
    <string name="estate_personal_price">₦750</string>
    <!--Professional-->
    <string name="estate_personal">Personal</string>
    <string name="estate_pro_slot">20</string>
    <string name="estate_pro_price">₦750</string>
    <string name="estate_pro">Professional</string>
    <string name="format_property_header">%s  for sale</string>
    <string name="tour_title">%s\tTour</string>
    <string name="about_us">Roar is an escrow service platform, that provides you with the lodges with in the University of Nigeria campuses( UNN and UNEC). it also enable students to sell their fairly used property or item. We scrutinize products that are sold on this platform and also ensures transparency in products and services with in the campuses.</string>
    <string name="customer_rule1">Direct question pertaining to your personal temporary accommodation to our WhatsApp accommodation customer service and not in the WhatsApp group</string>
    <string name="customer_rule2">Members are not allowed to make calls to customer service anytime, please tell your questions and problems directly, they can identify and answer back as soon as possible</string>
    <string name="customer_rule3">The WhatsApp and Telegram group on this screen are the only groups which are officially authorized by RoaR, members should join at least one of the community groups to keep pace with other members.</string>
    <string name="customer_rule4">Members should not believe any other platforms or links which are posted in our groups by some people who have an ulterior motive, you will bear the consequences of all such acts take if you do so.</string>
    <string name="customer_rule5">Members should not make a payment to any account which is not belong to Roar, please be aware of being defrauded.</string>
    <string name="customer_rule6">The quality of customer service is one of the most foundation of Roar, if anyone of the customer service hasn\'t served you well, please send feedback to complain about his or her service with their mobile number at roar.escrow.mailbox@gmail.com</string>
    <string name="call_text">Call</string>
    <string name="upload_video_file">Upload video file…</string>
    <string name="no_lodge_has_been_added_here_yet">No lodge has been added \n or \n Check your internet connection</string>
    <string name="term1">Direct question pertaining to your personal temporary accommodation to our WhatsApp accommodation customer service and not in the WhatsApp group</string>
    <string name="term2">Members are not allowed to make calls to customer service anytime, please tell your questions and problems directly, they can identify and answer back as soon as possible</string>
    <string name="term3">The WhatsApp and Telegram group on this screen are the only groups which are officially authorized by Roar, members should join at least one of the community groups to keep pace with other members.</string>
    <string name="term4">Members should not believe any other platforms or links which are posted in our groups by some people who have an ulterior motive, you will bear the consequences of all such acts take if you do so.</string>
    <string name="term5">Members should not make a payment to any account which does not belong to Roar, please be aware of being defrauded.</string>
    <string name="term6">The quality of customer service is one of the most foundation of Roar, if anyone of the customer service hasn\'t served you well, please send feedback to complain about his or her service with their mobile number at roar.escrow.mailbox@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="privacyAndTerms">
       <![CDATA[
       <body>
    <p>&nbsp; &nbsp;To use the services in the Roar app, you will need to agree to the <strong>Terms of Service</strong> below.</p>
    <p>You are agreeing to our <strong>Terms of service</strong> to enable the use of the services provided by the app.</p>
    <p>In, addition when you use our Roar app, we require that you grant access to the External Storage read and write permission.</p>
    <p><strong>Why do we require permission access</strong></p>
    <ul>
    <li>In other, to enable you share information like images through the app, we require that you grant us access to read and write to your storage memory.</li>
    <li>
        The app also requires access to internet state and internet permission in other to perform internet services like loading of internet data and images.
    </li>
    </ul>
    <p><strong>Features that require your attention</strong></p>
    <ul>
    <li>we implemented a<strong> notification</strong> feature in our Roar app which enables us to notify our users of available lodges and products.</li>
    <li>In other to make payment seamless, we integrated <strong>Flutterwave</strong> API in the Roar app. During the payment process, some of the user\'s personal and transaction details are required. The details provided by the users are not in any way stored, they are used only once. However, Flutterwave is one of the trusted payment gateways available in Africa. Please do well to try it out in our app.</li>
    </ul>
    <p><strong>You\’re in control </strong></p>
    <p>Depending on your settings, we have given our users control over what kind of notifications to receive from us. You can enable or disable the notification in the settings section of the app<strong>. Note:</strong> the app displays ads from <strong>Google Admob</strong> at specific areas of the app. We are conscious of how we display ads, so as not to interrupt our user activities on the app. <strong>Thank you for trying out our services on Roar</strong>. Our user\’s satisfaction is what keeps us moving, you can as well reach us at <strong>roar.escrow.mailbox@gmail.com.</strong></p>
    </body>
     ]]>
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="format_brandName">\@%s</string>
    <string name="select_string">Select</string>
    <string name="select_admin">Select Admin</string>
    <string name="online">Online</string>
    <string name="no_item_string">No item has been added here.</string>
    <string name="failed_to_load_item">No internet connection</string>
    <string name="check_your_internet_connection">Check your Internet Connection</string>
    <string name="ads">ads</string>
    <string name="campus_top_sales">Campus Top Sales</string>
    <string name="call_now">Call Now</string>
    <string name="about_us_title">About us</string>
    <string name="firestore_products">properties</string>
    <string name="firestore_lodges">lodges</string>
    <string name="firestore_others">others</string>
</resources>